--- a/css/global.css
+++ b/css/global.css
@@ -48,6 +48,16 @@ input::placeholder {
     font-weight: 400;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type=number] {
+    -moz-appearance: textfield;
+}
+
 a {
     text-decoration: none;
     color: var(--text-black-color);
