--- a/css/catalog.css
+++ b/css/catalog.css
@@ -323,7 +323,7 @@
     gap: 20px;
 }
 
-.catalog-popup__menu-item + .catalog-popup__menu-item {
+.catalog-popup__menu-item+.catalog-popup__menu-item {
     margin-top: 25px;
 }
 
@@ -367,7 +367,7 @@
     margin-bottom: 35px;
 }
 
-.catalog-popup__categories-item + .catalog-popup__categories-item {
+.catalog-popup__categories-item+.catalog-popup__categories-item {
     margin-top: 10px;
 }
 
@@ -856,7 +856,7 @@ a.header__categories-link:hover span {
     gap: 0 20px;
 }
 
-.filter {
+.aside {
     max-width: 260px;
     width: 100%;
 }
@@ -868,6 +868,12 @@ a.header__categories-link:hover span {
 
 .filter-items {
     margin-top: 50px;
+    max-height: 840px;
+    overflow: hidden;
+}
+
+.filter-items.expand {
+    max-height: 100%;
 }
 
 .filter-item {
@@ -875,12 +881,17 @@ a.header__categories-link:hover span {
     border-radius: 10px;
 }
 
-.filter-item + .filter-item {
+.filter-item+.filter-item {
     margin-top: 10px;
 }
 
 .filter-item.check .filter-item__list {
     padding: 20px;
+}
+
+.filter-item.check .filter-item__value span {
+    font-size: 18px;
+    line-height: 1.5;
 }
 
 .filter-item__props.hidden {
@@ -922,7 +933,7 @@ a.header__categories-link:hover span {
     padding: 0 20px 20px;
 }
 
-.filter-item__value + .filter-item__value {
+.filter-item__value+.filter-item__value {
     margin-top: 10px;
 }
 
@@ -984,7 +995,7 @@ a.header__categories-link:hover span {
     display: none;
 }
 
-.filter-item__value input:checked + label::after {
+.filter-item__value input:checked+label::after {
     opacity: 1;
 }
 
@@ -1034,6 +1045,7 @@ a.header__categories-link:hover span {
 .noUi-horizontal .noUi-handle-upper {
     right: 0;
 }
+
 .noUi-horizontal .noUi-handle-lower {
     right: -16px;
 }
@@ -1043,14 +1055,14 @@ a.header__categories-link:hover span {
     display: none;
 }
 
-.filter__items-btn {
+.filter-items-btn {
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 10px;
 }
 
-.filter__items-show-filters {
+.filter-items-show-filters {
     position: relative;
     font-size: 16px;
     line-height: 1.5;
@@ -1059,7 +1071,7 @@ a.header__categories-link:hover span {
     color: var(--main-blue);
 }
 
-.filter__items-show-filters::after {
+.filter-items-show-filters::after {
     content: '';
     position: absolute;
     left: calc(100% + 5px);
@@ -1068,6 +1080,10 @@ a.header__categories-link:hover span {
     width: 9px;
     height: 7px;
     transform: translateY(-50%);
+}
+
+.filter-items-show-filters.expand::after {
+    transform: rotate(180deg) translateY(50%);
 }
 
 .oval-btn--filter {
@@ -1090,7 +1106,7 @@ a.header__categories-link:hover span {
     /* position: relative;
     overflow: hidden; */
 }
-/* 
+
 .oval-btn--filter.reset span {
     position: absolute;
     display: block;
@@ -1103,6 +1119,7 @@ a.header__categories-link:hover span {
     z-index: -1;
 }
 
+/* 
 .oval-btn--filter.reset:hover {
     color: #fff;
 }
@@ -1111,6 +1128,76 @@ a.header__categories-link:hover span {
     width: 225%;
     height: 585px;
 } */
+
+.catalog__promo {
+    margin-top: 25px;
+}
+
+.promo-box {
+    background-color: var(--main-black);
+    border-radius: 10px;
+}
+
+.promo-box__header {
+    padding: 20px 20px 15px;
+    border-bottom: 1px solid var(--text-grey-color);
+}
+
+.promo-box__title {
+    font-size: 18px;
+    line-height: 1.5;
+    font-weight: 500;
+    color: #fff;
+}
+
+.promo-box__content {
+    display: flex;
+    align-items: center;
+    padding: 15px 20px 20px;
+    gap: 20px;
+}
+
+.promo-box__img {
+    width: 60px;
+    height: 60px;
+    border-radius: 10px;
+    background-color: #d9d9d9;
+}
+
+.promo-box__descr p {
+    color: #fff;
+    font-size: 16px;
+    line-height: 1.5;
+}
+
+.promo-box__descr .promo-box__price {
+    font-size: 20px;
+    line-height: 1.5;
+    font-weight: 500;
+}
+
+.promo-feedback {
+    position: relative;
+    padding: 21px 13px;
+    margin-top: 20px;
+    border-radius: 10px;
+    background: radial-gradient(295.17% 119.2% at 0% 100%, #537CE5 0%, #91AAEB 100%), radial-gradient(232.91% 127.46% at 6.27% 90.21%, rgba(255, 207, 113, 0.00) 0%, rgba(243, 167, 18, 0.00) 100%);
+}
+
+.promo-feedback p {
+    font-size: 16px;
+    line-height: 1.5;
+    font-weight: 500;
+    color: #fff;
+    max-width: 50%;
+    margin-left: 100px;
+}
+
+.promo-feedback img {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
 
 /* CATALOG END*/
 
@@ -2097,7 +2184,7 @@ form.auth__form {
     position: relative;
 }
 
-.auth__form-group + .auth__form-group {
+.auth__form-group+.auth__form-group {
     margin-top: 10px;
 }
 
@@ -2138,7 +2225,7 @@ form.auth__form {
     height: 16px;
 }
 
-#registerFormEntity + label {
+#registerFormEntity+label {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -2147,7 +2234,7 @@ form.auth__form {
     cursor: pointer;
 }
 
-#registerFormEntity + label::after {
+#registerFormEntity+label::after {
     content: '';
     width: 16px;
     height: 16px;
@@ -2159,7 +2246,7 @@ form.auth__form {
     padding: 3px;
 }
 
-#registerFormEntity:checked + label::after {
+#registerFormEntity:checked+label::after {
     background-image: url('../img/icons/check.svg');
 }
 
@@ -2235,4 +2322,5 @@ form.auth__form {
     line-height: 1.5;
     margin-top: 15px;
 }
+
 /* AUTH LOGIN END */
