--- a/css/style.css
+++ b/css/style.css
@@ -1718,6 +1718,11 @@ a.footer__nav-link--show {
     opacity: 1;
 }
 
+#fastView.modal {
+    visibility: visible;
+    opacity: 1;
+}
+
 .fast-view__container {
     min-height: 840px;
     background-color: var(--bg-white);
@@ -1755,6 +1760,7 @@ a.footer__nav-link--show {
 
 .product-box__gallery {
     max-width: 522px;
+    position: relative;
 }
 
 .product-box__name {
@@ -2217,6 +2223,43 @@ a.footer__nav-link--show {
 
 .product-box__shipping-button:hover svg path:nth-child(1) {
     fill: var(--main-blue);
+}
+
+.zoom-box {
+    position: absolute;
+    width: 522px;
+    height: 522px;
+}
+
+.zoom-img {
+    position: absolute;
+    width: 522px;
+    height: 522px;
+    z-index: 5;
+}
+
+.zoom-overlay {
+    position: absolute;
+    width: 540px;
+    height: 610px;
+    left: calc(100%);
+    background-repeat: no-repeat;
+    z-index: 5;
+    display: none;
+    border-radius: 10px;
+    box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+}
+
+.zoom-cursor {
+    border: 1px solid var(--text-grey-color);
+    width: 10px;
+    height: 10px;
+    opacity: .5;
+    background: #fff;
+    position: absolute;
+    z-index: 5;
+    display: none;
+    cursor: pointer;
 }
 
 /* FASTVIEW END */
