--- a/css/global.css
+++ b/css/global.css
@@ -30,6 +30,10 @@ html {
     line-height: 1.5;
 }
 
+::selection {
+    background: var(--to-order-color);
+}
+
 body {
     margin: 0;
     padding: 0;
