--- a/css/global.css
+++ b/css/global.css
@@ -26,8 +26,6 @@ html {
 *::before {
     box-sizing: border-box;
     font-family: var(--main-font);
-    font-size: 14px;
-    line-height: 1.5;
 }
 
 ::selection {
@@ -39,6 +37,8 @@ body {
     padding: 0;
     background-color: var(--bg-white);
     color: var(--text-black-color);
+    font-size: 14px;
+    line-height: 1.5;
 }
 
 input {
@@ -148,7 +148,6 @@ select::-ms-expand {
 }
 
 .oval-btn {
-    background-color: var(--main-blue);
     border-radius: 50px;
     color: #fff;
     font-weight: 500;
@@ -173,15 +172,98 @@ select::-ms-expand {
     border-radius: 10px;
     color: #fff;
     font-weight: 500;
-    background-color: var(--main-blue);
+    background-color: transparent;
     padding: 15px;
-    border: 2px solid var(--main-blue);
     transition: var(--default-transition);
 }
 
-.rect-btn:hover {
+.rect-btn.white {
     background-color: #fff;
     color: var(--main-blue);
+}
+
+.brand-banner {
+    background-color: #343538;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    height: 227px;
+}
+
+.brand-banner__logo {
+    max-width: 350px;
+    max-height: 100px;
+}
+
+.brand-banner__text {
+    font-size: 32px;
+    line-height: 1.5;
+    color: #fff;
+    font-weight: 300;
+    max-width: 400px;
+}
+
+.oval-btn--brand-banner {
+    padding: 15px 38px;
+}
+
+.oval-btn--brand-banner:hover {
+    color: #fff;
+    background-color: var(--hover-blue);
+}
+
+.white {
+    background-color: #fff;
+    color: var(--main-blue);
+}
+
+.white:hover {
+    background-color: var(--hover-blue);
+    color: #fff;
+}
+
+.blue {
+    background-color: var(--main-blue);
+    color: #fff;
+}
+
+.blue:hover {
+    background-color: var(--hover-blue);
+    color: #fff;
+}
+
+.transparent {
+    background-color: transparent;
+    color: var(--main-blue);
+    border: 1px solid var(--main-blue);
+}
+
+.transparent:hover {
+    background-color: var(--main-blue);
+    color: #fff;
+}
+
+.glass {
+    position: relative;
+    overflow: hidden;
+}
+
+.glass::after {
+    content: '';
+    position: absolute;
+    background-color: #fff;
+    opacity: 0.5;
+    height: 155px;
+    left: -75px;
+    top: -50px;
+    transform: rotate(35deg);
+    transition: var(--default-transition);
+    width: 50px;
+}
+
+.glass:hover::after {
+    left: 120%;
 }
 
 .close-btn {
@@ -206,6 +288,44 @@ select::-ms-expand {
     align-items: center;
     z-index: 999;
     background-color: rgba(0, 0, 0, .5);
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+    width: 42px;
+    height: 42px;
+    background-color: var(--main-blue);
+    border-radius: 50%;
+    transition: var(--default-transition);
+    top: 50%;
+}
+
+.swiper-button-prev {
+    left: -21px;
+}
+
+.swiper-button-next {
+    right: -21px;
+}
+
+.swiper-button-prev:hover,
+.swiper-button-next:hover {
+    background-color: var(--hover-blue);
+}
+
+.swiper-button-prev::after,
+.swiper-button-next::after {
+    width: 8px;
+    height: 12px;
+    font-size: 0;
+}
+
+.swiper-button-prev::after {
+    background: url('../img/icons/prev-button.svg') center center / cover no-repeat;
+}
+
+.swiper-button-next::after {
+    background: url('../img/icons/next-button.svg') center center / cover no-repeat;
 }
 
 /* SKELETON START */
