--- a/css/global.css
+++ b/css/global.css
@@ -131,14 +131,14 @@ select::-ms-expand {
 
 .title h2 {
     font-size: 42px;
-    line-height: 55px;
+    line-height: 1.3;
     font-weight: 700;
     color: var(--text-black-color);
 }
 
 .title p {
     font-size: 16px;
-    line-height: 24px;
+    line-height: 1.5;
     margin-top: 10px;
     color: var(--subtitle-color);
 }
@@ -211,6 +211,7 @@ select::-ms-expand {
 .white {
     background-color: #fff;
     color: var(--main-blue);
+    transition: var(--default-transition);
 }
 
 .white:hover {
@@ -221,6 +222,7 @@ select::-ms-expand {
 .blue {
     background-color: var(--main-blue);
     color: #fff;
+    transition: var(--default-transition);
 }
 
 .blue:hover {
