--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 @import url('./global.css');
 @import url('./catalog.css');
 @import url('./cart.css');
+@import url('./recs.css');
 
 /* HEADER START */
 
