Реализовал смену картинок при наведении на карточку, поменял кнопку быстрого просмотра. прим. ТОЛЬКО НА СТРАНИЦЕ КОРЗИНЫ, нужно внести изменения на всех других страницах тоже

--- a/css/catalog.css
+++ b/css/catalog.css
@@ -605,6 +605,7 @@
 
 .products__main .product-card:hover .product-card__footer {
     display: block;
+    border-radius: 0 0 5px 5px;
 }
 
 .promo-banner.promo-banner--catalog {
