--- a/css/recs.css
+++ b/css/recs.css
@@ -1,5 +1,9 @@
 /* RECS START */
 
+.recs {
+    padding-bottom: 50px;
+}
+
 .recs .title h2 {
     font-size: 25px;
 }
@@ -20,10 +24,69 @@
     background-color: #fff;
     z-index: 10;
     overflow: hidden;
+    border-radius: 0 0 5px 5px;
 }
 
 .recs-list .product-card:hover .product-card__footer {
    display: block;
+}
+
+.product-card__img-box-link {
+    position: relative;
+    padding: 10px;
+    width: 100%;
+    height: 100%;
+}
+
+.product-card__img-box .thumbs {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    overflow: hidden;
+    display: flex;
+    opacity: 0;
+    top: 0;
+    left: 0;
+}
+
+.product-card__img-box .thumbs .thumb {
+    width: 20%;
+}
+
+.thumbs-progressbar {
+    position: absolute;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    gap: 2px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+.progressbar-item {
+    width: 20%;
+    height: 3px;
+    background-color: #979797;
+}
+
+.progressbar-item.current {
+    background-color: var(--main-blue);
+}
+
+.recs-list .fast-view-btn {
+    bottom: 3px;
+    right: 0;
+    left: 0;
+    top: auto;
+    height: 35px;
+    background-color: rgba(217, 217, 217, .7);
+    z-index: 10;
+}
+
+.recs-list .fast-view-btn p {
+    font-size: 16px;
+    color: #6C7683;
 }
 
 /* RECS END */
