--- a/css/style.css
+++ b/css/style.css
@@ -1089,6 +1089,49 @@ a.header__categories-link:hover span {
     position: relative;
 }
 
+.product-card__img-box-link {
+    position: relative;
+    padding: 10px;
+    width: 100%;
+    height: 100%;
+}
+
+.product-card__img-box .thumbs {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    overflow: hidden;
+    display: flex;
+    opacity: 0;
+    top: 0;
+    left: 0;
+}
+
+.thumbs-progressbar {
+    position: absolute;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    gap: 2px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    opacity: 0;
+}
+
+.thumbs:hover ~ .thumbs-progressbar {
+    opacity: 1;
+}
+
+.progressbar-item {
+    height: 3px;
+    background-color: #979797;
+}
+
+.progressbar-item.current {
+    background-color: var(--main-blue);
+}
+
 .product-card__img-box:hover .fast-view-btn {
     opacity: 1;
 }
@@ -1099,14 +1142,13 @@ a.header__categories-link:hover span {
 
 .fast-view-btn {
     position: absolute;
-    background: rgba(39, 40, 43, .7);
-    top: 0;
-    bottom: 0;
+    background-color: rgba(217, 217, 217, .7);
+    top: auto;
+    bottom: 3px;
     right: 0;
     left: 0;
+    height: 35px;
     color: #fff;
-    font-size: 18px;
-    line-height: 27px;
     opacity: 0;
     transition: var(--default-transition);
     display: flex;
@@ -1115,11 +1157,12 @@ a.header__categories-link:hover span {
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    z-index: 10;
 }
 
-.fast-view-btn img {
-    max-width: 50px;
-    width: 100%;
+.fast-view-btn p {
+    font-size: 16px;
+    color: #6c7683;
 }
 
 .label-container {
